--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "test": "npm run jscs && ./node_modules/.bin/mocha",
     "jscs": "./node_modules/.bin/yodlr-standard"
   },
+  "repository": "git@github.com:yodlr/yodlr-metric.git",
   "standard": {
     "ignore": [
       "node_modules/**",
       "test/**"
     ]
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ross Kukulinski <ross@getyodlr.com>",
+  "license": "MIT",
   "devDependencies": {
     "mocha": "^2.1.0",
     "should": "^5.0.0",
