--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend agnostic metric library that pulls config from env/etcd",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run jscs && ./node_modules/.bin/mocha",
+    "test": "./node_modules/.bin/mocha",
     "jscs": "./node_modules/.bin/yodlr-standard"
   },
   "repository": "git@github.com:yodlr/yodlr-metric.git",
@@ -17,11 +17,15 @@
   "author": "Ross Kukulinski <ross@getyodlr.com>",
   "license": "MIT",
   "devDependencies": {
+    "async": "^0.9.0",
     "mocha": "^2.1.0",
+    "restify": "^2.8.5",
     "should": "^5.0.0",
     "yodlr-standard": "^10.1.0"
   },
   "dependencies": {
-    "eventemitter3": "^0.1.6"
+    "eventemitter3": "^0.1.6",
+    "lodash": "^3.2.0",
+    "lynx": "^0.2.0"
   }
 }
