--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "license": "MIT",
   "devDependencies": {
     "mocha": "^2.1.0",
-    "restify": "^2.8.5",
-    "should": "^5.0.0",
-    "yodlr-standard": "^10.1.0"
+    "restify": "^4.0.4",
+    "should": "^8.2.2",
+    "yodlr-standard": "^10.1.0",
+    "node-etcd": "^4.2.1"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "eventemitter3": "^0.1.6",
-    "lodash": "^3.2.0",
-    "lynx": "^0.2.0",
-    "node-etcd": "^3.0.2"
+    "async": "^1.5.2",
+    "eventemitter3": "^1.1.1",
+    "lodash": "^4.5.0",
+    "lynx": "^0.2.0"
   }
 }
